<resources>
    <string name="app_name">HisabhKitabh</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="dialog_heading">Basic Info</string>
    <string name="Username">FirstName LastName</string>
    <string name="ContactNumber">Contact Number</string>
    <string name="dialogbutton1">OK</string>
    <string name="dialogbutton2">Cancel</string>
    <string name="SignIn">Done</string>
    <string name="Cancel">Cancel</string>
    <string name="amount">Total Bill: </string>
    <string name="bucks">Total Bucks</string>
    <string name="Description">Description:</string>
    <string name="distribute">Distribute</string>
    <string name="among">among</string>
    <string name="listbutton">Names</string>
    <string name="register_layout">register_layout</string>
    <string name="singinHeading">PLEASE SIGN IN</string>
    <string name="Search">Enter names</string>
    <string name="closeApplication_intent">com.example.hisabhkitabh.closeApplication</string>
    <string name="defaultbill">0.00</string>
    <string name="creategroup">Create Group</string>
    <string name="addfriend_menu">Add Friend</string>
    <string name="Message">No Contacts Yet</string>
    <string name="savetransaction">save</string>
    <string name="pick_date">Choose Date</string>
    <string name="date_fragment_tag">dialogfragment</string>
    <string name="textOnACTV">With you and:</string>
    <string name="DefaultMessage">With you and:</string>
    <string name="owes">Owes</string>


    <string-array name="distribution">
        <item>equally</item>
        <item>unequally</item>

    </string-array>
</resources>
